Use flexbox to fix spacing of header

--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,6 +1,10 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
 }
 
 .logo {
@@ -14,6 +18,10 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  padding: 0px;
+  margin: 0px;
+  gap: 10px;
 }
 
 a {
@@ -23,3 +31,13 @@ a {
   /* this removes the line under the links */
   text-decoration: none;
 }
+
+/*.align-right {
+  margin-left: auto;
+  margin-right: 10px;
+}
+
+.align-left {
+  margin-right: auto;
+  margin-left: 10px;
+}*/
